--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "ajv": "^6.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "material-design-icons-iconfont": "^3.0.3",
     "style-loader": "^0.23.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
@@ -20,6 +19,7 @@
     "webpack": "^3.6.0"
   },
   "devDependencies": {
+    "@mdi/font": "^2.8.94",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -36,6 +36,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "material-design-icons-iconfont": "^3.0.3",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
