--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+# Used by Takahiro Kambe
+Bongo-Faster-Webpage-design.png
+GPS.json
+StudioCanbeAWS.pem
